# script

./: .env.example  .gitignore  .kbconfig.yaml  .mcp.json  .mcp.json.template  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_TODO.md  INITIAL_PROMPT.md  KNOWN_ISSUES.md  LICENSE  README.md  STATUS.md  VALIDATION_REPORT.md  basic_math.script  build_output.txt  fix_format_strings.sh  fix_scan_tokens.py  hello.script  install.ps1  install.sh  package.json  release-v0.4.0-alpha.sh  simple_perf_test.rs
.claude/commands/: audit.md  clean.md  debug.md  docs.md  grammar.md  implement.md  mcp.md  refactor.md  status.md  test.md  update.md
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release_checklist.md
.github/workflows/: arch-build.yml  ci.yml  nightly.yml  pr-labeler.yml  release.yml
aur/: setup-aur.sh  update-aur.sh
benches/: README.md  closure_performance.rs  common.rs  compilation.rs  cycle_detection_bench.rs  features.rs  generate_dashboard.py  generic_compilation_bench.rs  lexer.rs  memory.rs  monomorphization_bench.rs  parser.rs  requirements.txt  run_benchmarks.sh  scenarios.rs  security_benchmarks.rs  tooling.rs  type_system_benchmark.rs  unicode_security_bench.rs
benches/fixtures/: async_heavy.script  fibonacci_recursive.script  game_simulation.script  large_program.script  pattern_matching.script
docs/: DEVELOPER_GUIDE.md  GENERIC_IMPLEMENTATION_PLAN.md  GENERIC_PARSER_CHANGES.md  LANGUAGE_REFERENCE.md  README.md  SECURITY.md  TESTING_README.md  USER_GUIDE.md  VSCODE_SETUP.md  modules.md  test_security_guidelines.md  testing_framework.md
docs/architecture/: MCP.md  MEMORY.md  MODULES.md  OVERVIEW.md  PIPELINE.md
docs/development/: CONTRIBUTING.md  PERFORMANCE.md  SETUP.md  TESTING.md  TESTING_FRAMEWORK.md
docs/features/: AUTO_UPDATE.md
docs/integration/: BUILD.md  CLI.md  EMBEDDING.md  FFI.md
docs/language/: ACTORS.md  ERROR_HANDLING.md  GENERICS.md  GENERICS_SUMMARY.md  MODULE_DESIGN.md  PATTERNS.md  SPECIFICATION.md  SYNTAX.md  TYPES.md  TYPE_SYSTEM_OPTIMIZATION.md  UNICODE_SECURITY.md  USER_DEFINED_TYPES.md
docs/lsp/: COMPLETION.md  usage.md  vscode-extension-example.md
docs/releases/: v0.4.0-alpha-notes.md
docs/runtime/: ERROR_HANDLING.md  MEMORY_SAFETY.md  RUNTIME.md
docs/tutorials/: ADVANCED.md  GAME_DEV.md  (+1 more)
examples/: analysis_demo.rs  arithmetic.script  async_demo.script  async_simple.script  basic_features_test.script  basic_validation.script  closure_test.script  collections.script  const_functions.script  control_flow.script  control_flow_test.script  data_structures_validation.script  debug_test.script  debugger_demo.rs  derive_attributes.script  documented.script  enum_pattern_matching_demo.script  error_handling_advanced.script  error_handling_comprehensive.script  error_handling_demo.script  error_handling_validation.script  error_test.script  file_io_example.script  functional_error_handling.script  functions_advanced.script  generic_calls.script  generic_complex.script  generic_identity.script  generic_semantic_test.script  generic_simple.script  generic_stages_test.script  generic_structs.script  generic_structs_enums.script  generic_structs_enums_simple.script  generic_working.script  generics.script  generics_demo.script  hello.script  if_type_check_demo.script  impl_blocks_demo.script  (+37 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_comments.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_runtime.rs  fuzz_semantic.rs  fuzz_string_literals.rs  fuzz_unicode.rs
kb/: GENERICS_END_TO_END_TEST_RESULTS.md  GENERIC_FIXES_SUMMARY.md  IMPLEMENTATION_TODO.md  INITIAL_PROMPT.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  STATUS.md  TRAIT_INTEGRATION_SUMMARY.md
script-kb-mcp/: README.md  SETUP_COMPLETE.md  claude-desktop-config.example.json  package-lock.json  package.json  test-mcp.sh  tsconfig.json
src/: lib.rs  main.rs
tests/: GENERICS_TEST_STATUS.md  SEMANTIC_INTEGRATION_TESTING_REPORT.md  async_integration_test.rs  async_lowering_test.rs  async_secure_integration.rs  async_security_test.rs  async_transform_security_test.rs  async_vulnerability_test.rs  basic_module_parse_test.rs  closure_direct_call_test.rs  closure_verification_test.rs  cross_module_type_checking_test.rs  debugger_integration_test.rs  dependency_graph_unit_test.rs  end_to_end_generics_test.rs  error_handling_comprehensive.rs  error_handling_integration_test.rs  error_handling_test.rs  error_message_tests.rs  functional_programming_tests.rs  generic_integration_test.rs  generic_types_test.rs  generics_parsing_test.rs  lexer_unicode_integration.rs  memory_safety_integration_tests.rs  memory_safety_params_test.rs  mod.rs  module_context_test.rs  module_dependency_test.rs  module_examples_test.rs  module_integration_test.rs  module_security_test.rs  module_security_tests.rs  module_system_test.rs  module_tests.rs  monomorphization_integration_test.rs  pattern_matching_implementation_report.md  pattern_matching_tests.rs  repl_tests.rs  resource_limits_test.rs  (+15 more)
tools/: README.md  fix_rust_format.py
(+487 files in other folders)
