[package]
name = "script"
version = "0.5.0-alpha"
edition = "2021"
authors = ["Warren Gates (moikapy)"]
description = "Script: A simple yet powerful programming language for web applications and games"
readme = "README.md"
repository = "https://github.com/moikapy/script"
license = "MIT"
keywords = ["programming-language", "compiler", "script"]
categories = ["compilers", "development-tools"]

# Main binary - prioritizes developer experience
[[bin]]
name = "script"
path = "src/main.rs"

# Alternative binary for those who want to avoid conflicts
[[bin]]
name = "script-lang"
path = "src/main.rs"

# MCP Server binary (requires mcp feature)
[[bin]]
name = "script-mcp"
path = "src/bin/script-mcp.rs"
required-features = ["mcp"]

[dependencies]
colored = "3.0"
unicode-width = "0.2"
cranelift = "0.110"
cranelift-module = "0.121"
cranelift-jit = "0.121"
cranelift-native = "0.121"
# Debug symbol support
gimli = { version = "0.31", features = ["write"] }
target-lexicon = "0.12"
rand = "0.8"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
walkdir = "2.0"
sha2 = "0.10"
thiserror = "1.0"
dirs = "6.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
crossbeam = "0.8"
# LSP dependencies
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
tower-lsp = "0.20"
dashmap = "6.1"
env_logger = "0.11"
url = "2.5"
# Package manager dependencies
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
# Self-update functionality
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2"] }
# Unicode security dependencies
unicode-normalization = "0.1.22"
# Performance dependencies
ahash = "0.8"
# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }
# Signal handling for graceful shutdown
ctrlc = "3.4"
# Logging
log = "0.4"

[dev-dependencies]
criterion = "0.6"
proptest = "1.0"
tempfile = "3.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
# Enable fuzzing support
fuzzing = []
# Enable MCP (Model Context Protocol) support
mcp = []

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "compilation"
harness = false

[[bench]]
name = "features"
harness = false

[[bench]]
name = "scenarios"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "tooling"
harness = false

[[bench]]
name = "monomorphization_bench"
harness = false

[[bench]]
name = "generic_compilation_bench"
harness = false

[[bench]]
name = "cycle_detection_bench"
harness = false

[[bench]]
name = "unicode_security_bench"
harness = false

[[bin]]
name = "script-lsp"
path = "src/lsp/bin/main.rs"

[[bin]]
name = "manuscript"
path = "src/manuscript/main.rs"


[[bin]]
name = "script-debug"
path = "src/debugger/bin/main.rs"

[[bin]]
name = "script-test"
path = "src/testing/bin/main.rs"
